kube/metabase/networking.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: "${NAMESPACE}"
  annotations:
    networking.gke.io/managed-certificates: metabase-cert
    networking.gke.io/v1beta1.FrontendConfig: metabase-fc
    kubernetes.io/ingress.global-static-ip-name: metabase-dot-eave-dot-dev-addr
    kubernetes.io/ingress.class: gce
  labels:
    app: "${APPNAME}"
spec:
  # ingressClassName: gce # This does not work. Without the "ingress.class" annotation, the LB isn't created.
  defaultBackend:
    service:
      name: "${SERVICENAME}"
      port:
        name: http
